--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,9 +159,12 @@ p{
 #analysis {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 table, th, td {
+  margin: auto;
   border:1px solid black;
   text-align: center;
   table-layout: auto;
