--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,13 +129,13 @@ label:hover, label:focus, .submit:focus, .submit:hover{
   flex-direction: row;
   margin-top: 0.5em;
   margin-bottom: 9px;
-  align-items: space-between;
-  justify-content: space-around;
+  justify-content: center;
   gap: 3em;
 }
 
 .samp{
   max-width: 16em;
+  min-width: 10%;
   height: auto;
   border: 3px solid #034480;
 }
