--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link href="../static/css/style.css" rel="stylesheet" type="text/css">
     <script src="../static/js/main.js" defer></script>
   </head>
-<body>
+<body onload="pressButton();">
 <h1>Graph Reader</h1>
 <p class="intro">Upload an image of a directed graph, and this app will try to read and analyze it</p>
 
