--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,8 +123,16 @@ h2{
 }
 
 #mindistresult{
-  font-size: 16px;
+  font-size: 21px;
   font-weight: bolder;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+
+#mindistresult p{
+  font-size: 21px;
 }
 
 #mindistance input[type=text]{
